Update List of Employee, List of Product

--- a/Areas/Admin/Views/Customers/Index.cshtml
+++ b/Areas/Admin/Views/Customers/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header" data-background-color="purple">
-                        <h4 class="title">Customer</h4>
+                        <h4 class="title">Customers</h4>
                         <p class="category">List of Customer</p>
                     </div>
                     <div class="card-content table-responsive">
