--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -8,6 +8,10 @@
 <div class="content">
     <div class="container-fluid">
         <div class="row">
+            <div>
+                <p>@Html.ActionLink("Add A Product", "Create", "Products", new {@class = "btn btn-primary"})</p>
+                @* <button asp-action="Create" asp-controller="Products" class="btn btn-primary">Add new Product</button> *@
+            </div>
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header" data-background-color="purple">
@@ -17,31 +21,31 @@
                     <div class="card-content table-responsive">
                         <table class="table">
                             <thead class="text-primary">
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Supplier</th>
-                                    <th>Category</th>
-                                    <th>Price</th>
-                                    <th>Units In Stock</th>
-                                </tr>
+                            <tr>
+                                <th>Name</th>
+                                <th>Supplier</th>
+                                <th>Category</th>
+                                <th>Price</th>
+                                <th>Units In Stock</th>
+                            </tr>
                             </thead>
                             <tbody>
-                                @foreach (var p in ViewBag.OnePageOfProducts)
-                                {
-                                    <tr>
-                                        <td>@p.ProductName</td>
-                                        <td>@p.Supplier.CompanyName</td>
-                                        <td>@p.Category.CategoryName</td>
-                                        <td>@p.UnitPrice</td>
-                                        <td>@p.UnitsInStock</td>
-                                    </tr>
-                                }
+                            @foreach (var p in ViewBag.OnePageOfProducts)
+                            {
+                                <tr>
+                                    <td>@p.ProductName</td>
+                                    <td>@p.Supplier.CompanyName</td>
+                                    <td>@p.Category.CategoryName</td>
+                                    <td>@p.UnitPrice</td>
+                                    <td>@p.UnitsInStock</td>
+                                </tr>
+                            }
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div>
-                    @Html.PagedListPager((IPagedList)ViewBag.OnePageOfProducts, page => Url.Action("Index", new { page }))
+                    @Html.PagedListPager((IPagedList) ViewBag.OnePageOfProducts, page => Url.Action("Index", new {page}))
                 </div>
             </div>
         </div>
