--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,14 +19,14 @@
 </head>
 
 <body>
-    <div class="wrapper">
+<div class="wrapper">
     @Html.Partial("_Sidebar")
-        <div class="main-panel">
-            @Html.Partial("_Navbar")
-            @RenderBody()
-            @Html.Partial("_Footer")
-        </div>     
-    </div>
+    <div class="main-panel">
+        @Html.Partial("_Navbar")
+        @RenderBody()
+        @Html.Partial("_Footer")
+    </div>     
+</div>
 </body>
 <!--   Core JS Files   -->
 <script src="~/Admin/js/jquery-3.2.1.min.js" type="text/javascript"></script>
@@ -43,3 +43,5 @@
 <!-- Material Dashboard javascript methods -->
 <script src="~/Admin/js/material-dashboard.js?v=1.2.0"></script>
 </html>
+
+@RenderSection("scripts",required:false)
