--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -9,8 +9,7 @@
     <div class="container-fluid">
         <div class="row">
             <div>
-                <p>@Html.ActionLink("Add A Product", "Create", "Products", new {@class = "btn btn-primary"})</p>
-                @* <button asp-action="Create" asp-controller="Products" class="btn btn-primary">Add new Product</button> *@
+                <p>@Html.ActionLink("Add A Product", "Create", "Products", null, new { @class = "btn btn-primary" })</p>
             </div>
             <div class="col-md-12">
                 <div class="card">
@@ -18,34 +17,45 @@
                         <h4 class="title">Products</h4>
                         <p class="category">List of Product</p>
                     </div>
+                    <div class="form-group pull-right">
+                        @using (Html.BeginForm())
+                        {
+                            <div class="col-lg-7">
+                                @Html.TextBox("searchTerm", null, new { @class = "form-control" })
+                            </div>
+                            <div class="col-lg-3">
+                                <button class=" btn btn-primary btn-sm" type="submit">Search</button>
+                            </div>
+                        }
+                    </div>
                     <div class="card-content table-responsive">
                         <table class="table">
                             <thead class="text-primary">
-                            <tr>
-                                <th>Name</th>
-                                <th>Supplier</th>
-                                <th>Category</th>
-                                <th>Price</th>
-                                <th>Units In Stock</th>
-                            </tr>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Supplier</th>
+                                    <th>Category</th>
+                                    <th>Price</th>
+                                    <th>Units In Stock</th>
+                                </tr>
                             </thead>
                             <tbody>
-                            @foreach (var p in ViewBag.OnePageOfProducts)
-                            {
-                                <tr>
-                                    <td>@p.ProductName</td>
-                                    <td>@p.Supplier.CompanyName</td>
-                                    <td>@p.Category.CategoryName</td>
-                                    <td>@p.UnitPrice</td>
-                                    <td>@p.UnitsInStock</td>
-                                </tr>
-                            }
+                                @foreach (var p in ViewBag.OnePageOfProducts)
+                                {
+                                    <tr>
+                                        <td>@p.ProductName</td>
+                                        <td>@p.Supplier.CompanyName</td>
+                                        <td>@p.Category.CategoryName</td>
+                                        <td>@p.UnitPrice</td>
+                                        <td>@p.UnitsInStock</td>
+                                    </tr>
+                                }
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div>
-                    @Html.PagedListPager((IPagedList) ViewBag.OnePageOfProducts, page => Url.Action("Index", new {page}))
+                    @Html.PagedListPager((IPagedList)ViewBag.OnePageOfProducts, page => Url.Action("Index", new { page }))
                 </div>
             </div>
         </div>
