--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -8,25 +8,25 @@
 <div class="content">
     <div class="container-fluid">
         <div class="row">
-            <div>
+            <div class="col-md-8">
                 <p>@Html.ActionLink("Add A Product", "Create", "Products", null, new { @class = "btn btn-primary" })</p>
+            </div>
+            <div class="form-group pull-right">
+                @using (Html.BeginForm())
+                {
+                    <div class="col-lg-7">
+                        @Html.TextBox("searchTerm", null, new { @class = "form-control" })
+                    </div>
+                    <div class="col-lg-3">
+                        <button class=" btn btn-primary btn-sm" type="submit">Search</button>
+                    </div>
+                }
             </div>
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header" data-background-color="purple">
                         <h4 class="title">Products</h4>
                         <p class="category">List of Product</p>
-                    </div>
-                    <div class="form-group pull-right">
-                        @using (Html.BeginForm())
-                        {
-                            <div class="col-lg-7">
-                                @Html.TextBox("searchTerm", null, new { @class = "form-control" })
-                            </div>
-                            <div class="col-lg-3">
-                                <button class=" btn btn-primary btn-sm" type="submit">Search</button>
-                            </div>
-                        }
                     </div>
                     <div class="card-content table-responsive">
                         <table class="table">
