--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,20 +28,21 @@
             @Html.Partial("_Footer")
         </div>
     </div>
+    <!--   Core JS Files   -->
+    <script src="~/Admin/js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="~/Admin/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="~/Admin/js/material.min.js" type="text/javascript"></script>
+    <!--  Charts Plugin -->
+    <script src="~/Admin/js/chartist.min.js"></script>
+    <!--  Dynamic Elements plugin -->
+    <script src="~/Admin/js/arrive.min.js"></script>
+    <!--  PerfectScrollbar Library -->
+    <script src="~/Admin/js/perfect-scrollbar.jquery.min.js"></script>
+    <!--  Notifications Plugin    -->
+    <script src="~/Admin/js/bootstrap-notify.js"></script>
+    <!-- Material Dashboard javascript methods -->
+    <script src="~/Admin/js/material-dashboard.js?v=1.2.0"></script>
+    <script src="~/Admin/js/bootbox.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
-<!--   Core JS Files   -->
-<script src="~/Admin/js/jquery-3.2.1.min.js" type="text/javascript"></script>
-<script src="~/Admin/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="~/Admin/js/material.min.js" type="text/javascript"></script>
-<!--  Charts Plugin -->
-<script src="~/Admin/js/chartist.min.js"></script>
-<!--  Dynamic Elements plugin -->
-<script src="~/Admin/js/arrive.min.js"></script>
-<!--  PerfectScrollbar Library -->
-<script src="~/Admin/js/perfect-scrollbar.jquery.min.js"></script>
-<!--  Notifications Plugin    -->
-<script src="~/Admin/js/bootstrap-notify.js"></script>
-<!-- Material Dashboard javascript methods -->
-<script src="~/Admin/js/material-dashboard.js?v=1.2.0"></script>
 </html>
